out/production/TP Compiladores_G27/y.output
   0  $accept : program $end

   1  program : begin header_program cuerpo_prog end ','
   2          | header_program begin end ','
   3          | header_program begin cuerpo_prog ','
   4          | header_program cuerpo_prog end ','
   5          | header_program begin cuerpo_prog end
   6          | ','

   7  header_program : nombre_programa

   8  begin : '{'

   9  end : '}'

  10  nombre_programa : ID

  11  cuerpo_prog : declaracion ejecucion
  12              | declaracion
  13              | ejecucion
  14              | ejecucion declaracion
  15              | declaracion ejecucion declaracion

  16  declaracion : declaracion_variables declaracion_funcion
  17              | declaracion_variables
  18              | declaracion_funcion
  19              | declaracion_clase

  20  declaracion_variables : tipo list_var ','
  21                        | declaracion_variables tipo list_var ','
  22                        | list_var ','

  23  list_var : ID
  24           | list_var ';' ID

  25  declaracion_funcion : declaracion_funcion funcion
  26                      | declaracion_funcion funcion_sin_definir
  27                      | funcion
  28                      | funcion_sin_definir
  29                      | declaracion_impl

  30  funcion : header_funcion '(' list_de_parametros ')' '{' cuerpo_de_la_funcion '}' ','
  31          | header_funcion '(' list_de_parametros ')' '{' '}' ','

  32  funcion_sin_definir : header_funcion '(' list_de_parametros ')' ','

  33  header_funcion : VOID ID
  34                 | VOID

  35  cuerpo_de_la_funcion : declaracion ejecucion_funcion
  36                       | ejecucion_funcion

  37  list_de_parametros :
  38                     | parametro

  39  parametro : tipo ID
  40            | ID
  41            | tipo
  42            | CLASS ID

  43  tipo : UINT
  44       | SHORT
  45       | DOUBLE

  46  ejecucion_funcion : bloque_funcion

  47  bloque_funcion : bloque_funcion sentencia_funcion
  48                 | sentencia_funcion

  49  sentencia_funcion : sentencia

  50  ejecucion : ejecucion sentencia
  51            | sentencia

  52  sentencia : sentencia_ejecutable

  53  sentencia_ejecutable : asignacion ','
  54                       | seleccion ','
  55                       | impresion ','
  56                       | DO_UNTIL ','
  57                       | referencia_clase ','

  58  referencia_clase : ID '.' ID assign ID ','
  59                   | ID '.' ID assign ID '.' ID ','
  60                   | ID '.' ID assign ID '(' list_de_parametros ')' ','

  61  DO_UNTIL : pdo bloque_sentencias_do UNTIL '(' condicion ')'
  62           | pdo UNTIL '(' condicion ')'

  63  pdo : DO

  64  bloque_sentencias_do : '{' sentencia_ejecutable_do RETURN '(' expresion ')' ',' '}'
  65                       | '{' sentencia_ejecutable_do '}'
  66                       | '{' RETURN '(' expresion ')' ',' '}'
  67                       | '{' '}'
  68                       | sentencia_ejecutable_do '}'

  69  sentencia_ejecutable_do : sentencia_do
  70                          | sentencia_ejecutable_do sentencia_do

  71  sentencia_do : DO_UNTIL ';'
  72               | DO_UNTIL
  73               | impresion ','
  74               | impresion
  75               | seleccion_en_do ','
  76               | seleccion_en_do
  77               | asignacion ','

  78  seleccion_en_do : IF condicion_salto_if if_seleccion_do END_IF
  79                  | IF condicion_salto_if if_seleccion_do else_seleccion_do END_IF
  80                  | IF condicion_salto_if if_seleccion_do bloque_sentencias_do END_IF
  81                  | IF condicion_salto_if if_seleccion_do ELSE END_IF

  82  if_seleccion_do : bloque_sentencias_do

  83  else_seleccion_do : ELSE bloque_sentencias_do
  84                    | ELSE ','

  85  seleccion : IF condicion_salto_if if_seleccion END_IF
  86            | IF condicion_salto_if if_seleccion else_seleccion END_IF
  87            | IF condicion_salto_if if_seleccion begin ejecucion end ',' END_IF
  88            | IF condicion_salto_if END_IF
  89            | IF condicion_salto_if if_seleccion ELSE END_IF

  90  if_seleccion : ejecucion ','
  91               | ejecucion RETURN '(' expresion ')' ','
  92               | RETURN '(' expresion ')' ','
  93               | '(' expresion ')' ','
  94               | RETURN ','
  95               | ','
  96               | ejecucion

  97  else_seleccion : ELSE ejecucion ','
  98                 | ELSE ejecucion RETURN '(' expresion ')' ','
  99                 | ELSE RETURN '(' expresion ')' ','
 100                 | ELSE '(' expresion ')' ','
 101                 | ELSE RETURN ','
 102                 | ELSE ','
 103                 | ELSE ejecucion

 104  condicion_salto_if : '(' condicion ')'
 105                     | condicion ')'
 106                     | '(' ')'

 107  condicion : expresion_bool
 108            | condicion comparador expresion_bool

 109  expresion_bool : expresion comparador expresion
 110                 | expresion comparador
 111                 | comparador expresion

 112  comparador : comp_distinto
 113             | comp_igual
 114             | comp_mayor_igual
 115             | comp_menor_igual
 116             | '<'
 117             | '>'

 118  asignacion : ID assign '(' expresion ')'
 119             | ID assign expresion
 120             | assign expresion
 121             | ID expresion
 122             | ID assign

 123  expresion : expresion '+' termino_positivo
 124            | expresion '-' termino_positivo
 125            | termino

 126  termino : termino '*' factor
 127          | termino '/' factor
 128          | factor

 129  termino_positivo : termino_positivo '*' factor
 130                   | termino_positivo '/' factor
 131                   | factor_positivo

 132  factor : ID
 133         | constante
 134         | ID '(' list_parametros_reales ')'

 135  factor_positivo : ID
 136                  | cte
 137                  | ID '(' list_parametros_reales ')'

 138  constante : cte
 139            | '-' cte

 140  impresion : PRINT cadena
 141            | PRINT

 142  list_parametros_reales :
 143                         | parametro_real

 144  parametro_real : expresion

 145  declaracion_clase : CLASS ID '{' declaracion '}' ','
 146                    | CLASS ID '{' '}' ','
 147                    | CLASS '{' '}' ','
 148                    | CLASS ID ','

 149  declaracion_impl : IMPL FOR ID ':' '{' funciones_impl '}'

 150  funciones_impl : funciones_impl funcion
 151                 | funcion

state 0
	$accept : . program $end  (0)

	ID  shift 1
	','  shift 2
	'{'  shift 3
	.  error

	program  goto 4
	begin  goto 5
	header_program  goto 6
	nombre_programa  goto 7


state 1
	nombre_programa : ID .  (10)

	.  reduce 10


state 2
	program : ',' .  (6)

	.  reduce 6


state 3
	begin : '{' .  (8)

	.  reduce 8


state 4
	$accept : program . $end  (0)

	$end  accept


state 5
	program : begin . header_program cuerpo_prog end ','  (1)

	ID  shift 1
	.  error

	header_program  goto 8
	nombre_programa  goto 7


state 6
	program : header_program . begin end ','  (2)
	program : header_program . begin cuerpo_prog ','  (3)
	program : header_program . cuerpo_prog end ','  (4)
	program : header_program . begin cuerpo_prog end  (5)

	ID  shift 9
	IF  shift 10
	PRINT  shift 11
	VOID  shift 12
	DO  shift 13
	CLASS  shift 14
	assign  shift 15
	UINT  shift 16
	SHORT  shift 17
	IMPL  shift 18
	DOUBLE  shift 19
	'{'  shift 3
	.  error

	begin  goto 20
	cuerpo_prog  goto 21
	declaracion  goto 22
	ejecucion  goto 23
	declaracion_variables  goto 24
	declaracion_funcion  goto 25
	declaracion_clase  goto 26
	tipo  goto 27
	list_var  goto 28
	funcion  goto 29
	funcion_sin_definir  goto 30
	declaracion_impl  goto 31
	header_funcion  goto 32
	sentencia  goto 33
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	seleccion  goto 36
	impresion  goto 37
	DO_UNTIL  goto 38
	referencia_clase  goto 39
	pdo  goto 40


state 7
	header_program : nombre_programa .  (7)

	.  reduce 7


state 8
	program : begin header_program . cuerpo_prog end ','  (1)

	ID  shift 9
	IF  shift 10
	PRINT  shift 11
	VOID  shift 12
	DO  shift 13
	CLASS  shift 14
	assign  shift 15
	UINT  shift 16
	SHORT  shift 17
	IMPL  shift 18
	DOUBLE  shift 19
	.  error

	cuerpo_prog  goto 41
	declaracion  goto 22
	ejecucion  goto 23
	declaracion_variables  goto 24
	declaracion_funcion  goto 25
	declaracion_clase  goto 26
	tipo  goto 27
	list_var  goto 28
	funcion  goto 29
	funcion_sin_definir  goto 30
	declaracion_impl  goto 31
	header_funcion  goto 32
	sentencia  goto 33
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	seleccion  goto 36
	impresion  goto 37
	DO_UNTIL  goto 38
	referencia_clase  goto 39
	pdo  goto 40


state 9
	list_var : ID .  (23)
	referencia_clase : ID . '.' ID assign ID ','  (58)
	referencia_clase : ID . '.' ID assign ID '.' ID ','  (59)
	referencia_clase : ID . '.' ID assign ID '(' list_de_parametros ')' ','  (60)
	asignacion : ID . assign '(' expresion ')'  (118)
	asignacion : ID . assign expresion  (119)
	asignacion : ID . expresion  (121)
	asignacion : ID . assign  (122)

	ID  shift 42
	cte  shift 43
	assign  shift 44
	'-'  shift 45
	'.'  shift 46
	','  reduce 23
	';'  reduce 23

	expresion  goto 47
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 10
	seleccion : IF . condicion_salto_if if_seleccion END_IF  (85)
	seleccion : IF . condicion_salto_if if_seleccion else_seleccion END_IF  (86)
	seleccion : IF . condicion_salto_if if_seleccion begin ejecucion end ',' END_IF  (87)
	seleccion : IF . condicion_salto_if END_IF  (88)
	seleccion : IF . condicion_salto_if if_seleccion ELSE END_IF  (89)

	ID  shift 42
	cte  shift 43
	comp_menor_igual  shift 51
	comp_mayor_igual  shift 52
	comp_distinto  shift 53
	comp_igual  shift 54
	'-'  shift 45
	'>'  shift 55
	'<'  shift 56
	'('  shift 57
	.  error

	condicion  goto 58
	expresion  goto 59
	condicion_salto_if  goto 60
	expresion_bool  goto 61
	comparador  goto 62
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 11
	impresion : PRINT . cadena  (140)
	impresion : PRINT .  (141)

	cadena  shift 63
	ID  reduce 141
	IF  reduce 141
	PRINT  reduce 141
	RETURN  reduce 141
	DO  reduce 141
	assign  reduce 141
	','  reduce 141
	'}'  reduce 141


state 12
	header_funcion : VOID . ID  (33)
	header_funcion : VOID .  (34)

	ID  shift 64
	'('  reduce 34


state 13
	pdo : DO .  (63)

	.  reduce 63


state 14
	declaracion_clase : CLASS . ID '{' declaracion '}' ','  (145)
	declaracion_clase : CLASS . ID '{' '}' ','  (146)
	declaracion_clase : CLASS . '{' '}' ','  (147)
	declaracion_clase : CLASS . ID ','  (148)

	ID  shift 65
	'{'  shift 66
	.  error


state 15
	asignacion : assign . expresion  (120)

	ID  shift 42
	cte  shift 43
	'-'  shift 45
	.  error

	expresion  goto 67
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 16
	tipo : UINT .  (43)

	.  reduce 43


state 17
	tipo : SHORT .  (44)

	.  reduce 44


state 18
	declaracion_impl : IMPL . FOR ID ':' '{' funciones_impl '}'  (149)

	FOR  shift 68
	.  error


state 19
	tipo : DOUBLE .  (45)

	.  reduce 45


state 20
	program : header_program begin . end ','  (2)
	program : header_program begin . cuerpo_prog ','  (3)
	program : header_program begin . cuerpo_prog end  (5)

	ID  shift 9
	IF  shift 10
	PRINT  shift 11
	VOID  shift 12
	DO  shift 13
	CLASS  shift 14
	assign  shift 15
	UINT  shift 16
	SHORT  shift 17
	IMPL  shift 18
	DOUBLE  shift 19
	'}'  shift 69
	.  error

	cuerpo_prog  goto 70
	end  goto 71
	declaracion  goto 22
	ejecucion  goto 23
	declaracion_variables  goto 24
	declaracion_funcion  goto 25
	declaracion_clase  goto 26
	tipo  goto 27
	list_var  goto 28
	funcion  goto 29
	funcion_sin_definir  goto 30
	declaracion_impl  goto 31
	header_funcion  goto 32
	sentencia  goto 33
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	seleccion  goto 36
	impresion  goto 37
	DO_UNTIL  goto 38
	referencia_clase  goto 39
	pdo  goto 40


state 21
	program : header_program cuerpo_prog . end ','  (4)

	'}'  shift 69
	.  error

	end  goto 72


state 22
	cuerpo_prog : declaracion . ejecucion  (11)
	cuerpo_prog : declaracion .  (12)
	cuerpo_prog : declaracion . ejecucion declaracion  (15)

	ID  shift 73
	IF  shift 10
	PRINT  shift 11
	DO  shift 13
	assign  shift 15
	','  reduce 12
	'}'  reduce 12

	ejecucion  goto 74
	sentencia  goto 33
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	seleccion  goto 36
	impresion  goto 37
	DO_UNTIL  goto 38
	referencia_clase  goto 39
	pdo  goto 40


state 23
	cuerpo_prog : ejecucion .  (13)
	cuerpo_prog : ejecucion . declaracion  (14)
	ejecucion : ejecucion . sentencia  (50)

	ID  shift 9
	IF  shift 10
	PRINT  shift 11
	VOID  shift 12
	DO  shift 13
	CLASS  shift 14
	assign  shift 15
	UINT  shift 16
	SHORT  shift 17
	IMPL  shift 18
	DOUBLE  shift 19
	','  reduce 13
	'}'  reduce 13

	declaracion  goto 75
	declaracion_variables  goto 24
	declaracion_funcion  goto 25
	declaracion_clase  goto 26
	tipo  goto 27
	list_var  goto 28
	funcion  goto 29
	funcion_sin_definir  goto 30
	declaracion_impl  goto 31
	header_funcion  goto 32
	sentencia  goto 76
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	seleccion  goto 36
	impresion  goto 37
	DO_UNTIL  goto 38
	referencia_clase  goto 39
	pdo  goto 40


state 24
	declaracion : declaracion_variables . declaracion_funcion  (16)
	declaracion : declaracion_variables .  (17)
	declaracion_variables : declaracion_variables . tipo list_var ','  (21)

	VOID  shift 12
	UINT  shift 16
	SHORT  shift 17
	IMPL  shift 18
	DOUBLE  shift 19
	ID  reduce 17
	IF  reduce 17
	PRINT  reduce 17
	DO  reduce 17
	assign  reduce 17
	','  reduce 17
	'}'  reduce 17

	declaracion_funcion  goto 77
	tipo  goto 78
	funcion  goto 29
	funcion_sin_definir  goto 30
	declaracion_impl  goto 31
	header_funcion  goto 32


state 25
	declaracion : declaracion_funcion .  (18)
	declaracion_funcion : declaracion_funcion . funcion  (25)
	declaracion_funcion : declaracion_funcion . funcion_sin_definir  (26)

	VOID  shift 12
	ID  reduce 18
	IF  reduce 18
	PRINT  reduce 18
	DO  reduce 18
	assign  reduce 18
	','  reduce 18
	'}'  reduce 18

	funcion  goto 79
	funcion_sin_definir  goto 80
	header_funcion  goto 32


state 26
	declaracion : declaracion_clase .  (19)

	.  reduce 19


state 27
	declaracion_variables : tipo . list_var ','  (20)

	ID  shift 81
	.  error

	list_var  goto 82


state 28
	declaracion_variables : list_var . ','  (22)
	list_var : list_var . ';' ID  (24)

	','  shift 83
	';'  shift 84
	.  error


state 29
	declaracion_funcion : funcion .  (27)

	.  reduce 27


state 30
	declaracion_funcion : funcion_sin_definir .  (28)

	.  reduce 28


state 31
	declaracion_funcion : declaracion_impl .  (29)

	.  reduce 29


state 32
	funcion : header_funcion . '(' list_de_parametros ')' '{' cuerpo_de_la_funcion '}' ','  (30)
	funcion : header_funcion . '(' list_de_parametros ')' '{' '}' ','  (31)
	funcion_sin_definir : header_funcion . '(' list_de_parametros ')' ','  (32)

	'('  shift 85
	.  error


state 33
	ejecucion : sentencia .  (51)

	.  reduce 51


state 34
	sentencia : sentencia_ejecutable .  (52)

	.  reduce 52


state 35
	sentencia_ejecutable : asignacion . ','  (53)

	','  shift 86
	.  error


state 36
	sentencia_ejecutable : seleccion . ','  (54)

	','  shift 87
	.  error


state 37
	sentencia_ejecutable : impresion . ','  (55)

	','  shift 88
	.  error


state 38
	sentencia_ejecutable : DO_UNTIL . ','  (56)

	','  shift 89
	.  error


state 39
	sentencia_ejecutable : referencia_clase . ','  (57)

	','  shift 90
	.  error


state 40
	DO_UNTIL : pdo . bloque_sentencias_do UNTIL '(' condicion ')'  (61)
	DO_UNTIL : pdo . UNTIL '(' condicion ')'  (62)

	ID  shift 91
	IF  shift 92
	PRINT  shift 11
	DO  shift 13
	UNTIL  shift 93
	assign  shift 15
	'{'  shift 94
	.  error

	asignacion  goto 95
	impresion  goto 96
	DO_UNTIL  goto 97
	pdo  goto 40
	bloque_sentencias_do  goto 98
	sentencia_ejecutable_do  goto 99
	sentencia_do  goto 100
	seleccion_en_do  goto 101


state 41
	program : begin header_program cuerpo_prog . end ','  (1)

	'}'  shift 69
	.  error

	end  goto 102


state 42
	factor : ID .  (132)
	factor : ID . '(' list_parametros_reales ')'  (134)

	'('  shift 103
	comp_menor_igual  reduce 132
	comp_mayor_igual  reduce 132
	comp_distinto  reduce 132
	comp_igual  reduce 132
	'+'  reduce 132
	'-'  reduce 132
	'*'  reduce 132
	'/'  reduce 132
	'>'  reduce 132
	'<'  reduce 132
	','  reduce 132
	')'  reduce 132


state 43
	constante : cte .  (138)

	.  reduce 138


state 44
	asignacion : ID assign . '(' expresion ')'  (118)
	asignacion : ID assign . expresion  (119)
	asignacion : ID assign .  (122)

	ID  shift 42
	cte  shift 43
	'-'  shift 45
	'('  shift 104
	','  reduce 122

	expresion  goto 105
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 45
	constante : '-' . cte  (139)

	cte  shift 106
	.  error


state 46
	referencia_clase : ID '.' . ID assign ID ','  (58)
	referencia_clase : ID '.' . ID assign ID '.' ID ','  (59)
	referencia_clase : ID '.' . ID assign ID '(' list_de_parametros ')' ','  (60)

	ID  shift 107
	.  error


state 47
	asignacion : ID expresion .  (121)
	expresion : expresion . '+' termino_positivo  (123)
	expresion : expresion . '-' termino_positivo  (124)

	'+'  shift 108
	'-'  shift 109
	','  reduce 121


state 48
	expresion : termino .  (125)
	termino : termino . '*' factor  (126)
	termino : termino . '/' factor  (127)

	'*'  shift 110
	'/'  shift 111
	comp_menor_igual  reduce 125
	comp_mayor_igual  reduce 125
	comp_distinto  reduce 125
	comp_igual  reduce 125
	'+'  reduce 125
	'-'  reduce 125
	'>'  reduce 125
	'<'  reduce 125
	','  reduce 125
	')'  reduce 125


state 49
	termino : factor .  (128)

	.  reduce 128


state 50
	factor : constante .  (133)

	.  reduce 133


state 51
	comparador : comp_menor_igual .  (115)

	.  reduce 115


state 52
	comparador : comp_mayor_igual .  (114)

	.  reduce 114


state 53
	comparador : comp_distinto .  (112)

	.  reduce 112


state 54
	comparador : comp_igual .  (113)

	.  reduce 113


state 55
	comparador : '>' .  (117)

	.  reduce 117


state 56
	comparador : '<' .  (116)

	.  reduce 116


state 57
	condicion_salto_if : '(' . condicion ')'  (104)
	condicion_salto_if : '(' . ')'  (106)

	ID  shift 42
	cte  shift 43
	comp_menor_igual  shift 51
	comp_mayor_igual  shift 52
	comp_distinto  shift 53
	comp_igual  shift 54
	'-'  shift 45
	'>'  shift 55
	'<'  shift 56
	')'  shift 112
	.  error

	condicion  goto 113
	expresion  goto 59
	expresion_bool  goto 61
	comparador  goto 62
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 58
	condicion_salto_if : condicion . ')'  (105)
	condicion : condicion . comparador expresion_bool  (108)

	comp_menor_igual  shift 51
	comp_mayor_igual  shift 52
	comp_distinto  shift 53
	comp_igual  shift 54
	'>'  shift 55
	'<'  shift 56
	')'  shift 114
	.  error

	comparador  goto 115


state 59
	expresion_bool : expresion . comparador expresion  (109)
	expresion_bool : expresion . comparador  (110)
	expresion : expresion . '+' termino_positivo  (123)
	expresion : expresion . '-' termino_positivo  (124)

	comp_menor_igual  shift 51
	comp_mayor_igual  shift 52
	comp_distinto  shift 53
	comp_igual  shift 54
	'+'  shift 108
	'-'  shift 109
	'>'  shift 55
	'<'  shift 56
	.  error

	comparador  goto 116


state 60
	seleccion : IF condicion_salto_if . if_seleccion END_IF  (85)
	seleccion : IF condicion_salto_if . if_seleccion else_seleccion END_IF  (86)
	seleccion : IF condicion_salto_if . if_seleccion begin ejecucion end ',' END_IF  (87)
	seleccion : IF condicion_salto_if . END_IF  (88)
	seleccion : IF condicion_salto_if . if_seleccion ELSE END_IF  (89)

	ID  shift 73
	IF  shift 10
	END_IF  shift 117
	PRINT  shift 11
	RETURN  shift 118
	DO  shift 13
	assign  shift 15
	','  shift 119
	'('  shift 120
	.  error

	ejecucion  goto 121
	sentencia  goto 33
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	seleccion  goto 36
	impresion  goto 37
	DO_UNTIL  goto 38
	referencia_clase  goto 39
	pdo  goto 40
	if_seleccion  goto 122


state 61
	condicion : expresion_bool .  (107)

	.  reduce 107


state 62
	expresion_bool : comparador . expresion  (111)

	ID  shift 42
	cte  shift 43
	'-'  shift 45
	.  error

	expresion  goto 123
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 63
	impresion : PRINT cadena .  (140)

	.  reduce 140


state 64
	header_funcion : VOID ID .  (33)

	.  reduce 33


state 65
	declaracion_clase : CLASS ID . '{' declaracion '}' ','  (145)
	declaracion_clase : CLASS ID . '{' '}' ','  (146)
	declaracion_clase : CLASS ID . ','  (148)

	','  shift 124
	'{'  shift 125
	.  error


state 66
	declaracion_clase : CLASS '{' . '}' ','  (147)

	'}'  shift 126
	.  error


state 67
	asignacion : assign expresion .  (120)
	expresion : expresion . '+' termino_positivo  (123)
	expresion : expresion . '-' termino_positivo  (124)

	'+'  shift 108
	'-'  shift 109
	','  reduce 120


state 68
	declaracion_impl : IMPL FOR . ID ':' '{' funciones_impl '}'  (149)

	ID  shift 127
	.  error


state 69
	end : '}' .  (9)

	.  reduce 9


state 70
	program : header_program begin cuerpo_prog . ','  (3)
	program : header_program begin cuerpo_prog . end  (5)

	','  shift 128
	'}'  shift 69
	.  error

	end  goto 129


state 71
	program : header_program begin end . ','  (2)

	','  shift 130
	.  error


state 72
	program : header_program cuerpo_prog end . ','  (4)

	','  shift 131
	.  error


state 73
	referencia_clase : ID . '.' ID assign ID ','  (58)
	referencia_clase : ID . '.' ID assign ID '.' ID ','  (59)
	referencia_clase : ID . '.' ID assign ID '(' list_de_parametros ')' ','  (60)
	asignacion : ID . assign '(' expresion ')'  (118)
	asignacion : ID . assign expresion  (119)
	asignacion : ID . expresion  (121)
	asignacion : ID . assign  (122)

	ID  shift 42
	cte  shift 43
	assign  shift 44
	'-'  shift 45
	'.'  shift 46
	.  error

	expresion  goto 47
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 74
	cuerpo_prog : declaracion ejecucion .  (11)
	cuerpo_prog : declaracion ejecucion . declaracion  (15)
	ejecucion : ejecucion . sentencia  (50)

	ID  shift 9
	IF  shift 10
	PRINT  shift 11
	VOID  shift 12
	DO  shift 13
	CLASS  shift 14
	assign  shift 15
	UINT  shift 16
	SHORT  shift 17
	IMPL  shift 18
	DOUBLE  shift 19
	','  reduce 11
	'}'  reduce 11

	declaracion  goto 132
	declaracion_variables  goto 24
	declaracion_funcion  goto 25
	declaracion_clase  goto 26
	tipo  goto 27
	list_var  goto 28
	funcion  goto 29
	funcion_sin_definir  goto 30
	declaracion_impl  goto 31
	header_funcion  goto 32
	sentencia  goto 76
	sentencia_ejecutable  goto 34
	asignacion  goto 35
	seleccion  goto 36
	impresion  goto 37
	DO_UNTIL  goto 38
	referencia_clase  goto 39
	pdo  goto 40


state 75
	cuerpo_prog : ejecucion declaracion .  (14)

	.  reduce 14


state 76
	ejecucion : ejecucion sentencia .  (50)

	.  reduce 50


state 77
	declaracion : declaracion_variables declaracion_funcion .  (16)
	declaracion_funcion : declaracion_funcion . funcion  (25)
	declaracion_funcion : declaracion_funcion . funcion_sin_definir  (26)

	VOID  shift 12
	ID  reduce 16
	IF  reduce 16
	PRINT  reduce 16
	DO  reduce 16
	assign  reduce 16
	','  reduce 16
	'}'  reduce 16

	funcion  goto 79
	funcion_sin_definir  goto 80
	header_funcion  goto 32


state 78
	declaracion_variables : declaracion_variables tipo . list_var ','  (21)

	ID  shift 81
	.  error

	list_var  goto 133


state 79
	declaracion_funcion : declaracion_funcion funcion .  (25)

	.  reduce 25


state 80
	declaracion_funcion : declaracion_funcion funcion_sin_definir .  (26)

	.  reduce 26


state 81
	list_var : ID .  (23)

	.  reduce 23


state 82
	declaracion_variables : tipo list_var . ','  (20)
	list_var : list_var . ';' ID  (24)

	','  shift 134
	';'  shift 84
	.  error


state 83
	declaracion_variables : list_var ',' .  (22)

	.  reduce 22


state 84
	list_var : list_var ';' . ID  (24)

	ID  shift 135
	.  error


state 85
	funcion : header_funcion '(' . list_de_parametros ')' '{' cuerpo_de_la_funcion '}' ','  (30)
	funcion : header_funcion '(' . list_de_parametros ')' '{' '}' ','  (31)
	funcion_sin_definir : header_funcion '(' . list_de_parametros ')' ','  (32)
	list_de_parametros : .  (37)

	ID  shift 136
	CLASS  shift 137
	UINT  shift 16
	SHORT  shift 17
	DOUBLE  shift 19
	')'  reduce 37

	tipo  goto 138
	list_de_parametros  goto 139
	parametro  goto 140


state 86
	sentencia_ejecutable : asignacion ',' .  (53)

	.  reduce 53


state 87
	sentencia_ejecutable : seleccion ',' .  (54)

	.  reduce 54


state 88
	sentencia_ejecutable : impresion ',' .  (55)

	.  reduce 55


state 89
	sentencia_ejecutable : DO_UNTIL ',' .  (56)

	.  reduce 56


state 90
	sentencia_ejecutable : referencia_clase ',' .  (57)

	.  reduce 57


state 91
	asignacion : ID . assign '(' expresion ')'  (118)
	asignacion : ID . assign expresion  (119)
	asignacion : ID . expresion  (121)
	asignacion : ID . assign  (122)

	ID  shift 42
	cte  shift 43
	assign  shift 44
	'-'  shift 45
	.  error

	expresion  goto 47
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 92
	seleccion_en_do : IF . condicion_salto_if if_seleccion_do END_IF  (78)
	seleccion_en_do : IF . condicion_salto_if if_seleccion_do else_seleccion_do END_IF  (79)
	seleccion_en_do : IF . condicion_salto_if if_seleccion_do bloque_sentencias_do END_IF  (80)
	seleccion_en_do : IF . condicion_salto_if if_seleccion_do ELSE END_IF  (81)

	ID  shift 42
	cte  shift 43
	comp_menor_igual  shift 51
	comp_mayor_igual  shift 52
	comp_distinto  shift 53
	comp_igual  shift 54
	'-'  shift 45
	'>'  shift 55
	'<'  shift 56
	'('  shift 57
	.  error

	condicion  goto 58
	expresion  goto 59
	condicion_salto_if  goto 141
	expresion_bool  goto 61
	comparador  goto 62
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 93
	DO_UNTIL : pdo UNTIL . '(' condicion ')'  (62)

	'('  shift 142
	.  error


state 94
	bloque_sentencias_do : '{' . sentencia_ejecutable_do RETURN '(' expresion ')' ',' '}'  (64)
	bloque_sentencias_do : '{' . sentencia_ejecutable_do '}'  (65)
	bloque_sentencias_do : '{' . RETURN '(' expresion ')' ',' '}'  (66)
	bloque_sentencias_do : '{' . '}'  (67)

	ID  shift 91
	IF  shift 92
	PRINT  shift 11
	RETURN  shift 143
	DO  shift 13
	assign  shift 15
	'}'  shift 144
	.  error

	asignacion  goto 95
	impresion  goto 96
	DO_UNTIL  goto 97
	pdo  goto 40
	sentencia_ejecutable_do  goto 145
	sentencia_do  goto 100
	seleccion_en_do  goto 101


state 95
	sentencia_do : asignacion . ','  (77)

	','  shift 146
	.  error


state 96
	sentencia_do : impresion . ','  (73)
	sentencia_do : impresion .  (74)

	','  shift 147
	ID  reduce 74
	IF  reduce 74
	PRINT  reduce 74
	RETURN  reduce 74
	DO  reduce 74
	assign  reduce 74
	'}'  reduce 74


state 97
	sentencia_do : DO_UNTIL . ';'  (71)
	sentencia_do : DO_UNTIL .  (72)

	';'  shift 148
	ID  reduce 72
	IF  reduce 72
	PRINT  reduce 72
	RETURN  reduce 72
	DO  reduce 72
	assign  reduce 72
	'}'  reduce 72


state 98
	DO_UNTIL : pdo bloque_sentencias_do . UNTIL '(' condicion ')'  (61)

	UNTIL  shift 149
	.  error


state 99
	bloque_sentencias_do : sentencia_ejecutable_do . '}'  (68)
	sentencia_ejecutable_do : sentencia_ejecutable_do . sentencia_do  (70)

	ID  shift 91
	IF  shift 92
	PRINT  shift 11
	DO  shift 13
	assign  shift 15
	'}'  shift 150
	.  error

	asignacion  goto 95
	impresion  goto 96
	DO_UNTIL  goto 97
	pdo  goto 40
	sentencia_do  goto 151
	seleccion_en_do  goto 101


state 100
	sentencia_ejecutable_do : sentencia_do .  (69)

	.  reduce 69


state 101
	sentencia_do : seleccion_en_do . ','  (75)
	sentencia_do : seleccion_en_do .  (76)

	','  shift 152
	ID  reduce 76
	IF  reduce 76
	PRINT  reduce 76
	RETURN  reduce 76
	DO  reduce 76
	assign  reduce 76
	'}'  reduce 76


state 102
	program : begin header_program cuerpo_prog end . ','  (1)

	','  shift 153
	.  error


state 103
	factor : ID '(' . list_parametros_reales ')'  (134)
	list_parametros_reales : .  (142)

	ID  shift 42
	cte  shift 43
	'-'  shift 45
	')'  reduce 142

	expresion  goto 154
	termino  goto 48
	factor  goto 49
	constante  goto 50
	list_parametros_reales  goto 155
	parametro_real  goto 156


state 104
	asignacion : ID assign '(' . expresion ')'  (118)

	ID  shift 42
	cte  shift 43
	'-'  shift 45
	.  error

	expresion  goto 157
	termino  goto 48
	factor  goto 49
	constante  goto 50


state 105
	asignacion : ID assign expresion .  (119)
	expresion : expresion . '+' termino_positivo  (123)
	expresion : expresion . '-' termino_positivo  (124)

	'+'  shift 108
	'-'  shift 109
	','  reduce 119


state 106
	constante : '-' cte .  (139)

	.  reduce 139


state 107
	referencia_clase : ID '.' ID . assign ID ','  (58)
	referencia_clase : ID '.' ID . assign ID '.' ID ','  (59)
	referencia_clase : ID '.' ID . assign ID '(' list_de_parametros ')' ','  (60)

	assign  shift 158
	.  error


state 108
	expresion : expresion '+' . termino_positivo  (123)

	ID  shift 159
	cte  shift 160
	.  error
